--- a/app/src/main/res/layout/new_game.xml
+++ b/app/src/main/res/layout/new_game.xml
@@ -22,6 +22,15 @@
         android:layout_marginRight="16dp"
         android:padding="8dp" />
 
+
+    <Spinner
+        android:id="@+id/spPlataforma"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:padding="8dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
