--- a/app/src/main/res/layout/new_genero.xml
+++ b/app/src/main/res/layout/new_genero.xml
@@ -5,15 +5,17 @@
     android:orientation="vertical">
 
 
-    <EditText
-        android:id="@+id/etGenero"
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        android:hint="Informe o genero" />
+        android:layout_marginTop="8dp">
 
-    <include layout="@layout/botoes_dialog"/>
+        <EditText
+            android:id="@+id/etGenero"
+            style="@style/edittext_form"
+            android:hint="Informe o genero" />
+    </android.support.design.widget.TextInputLayout>
+
+    <include layout="@layout/botoes_dialog" />
 
 </LinearLayout>
