Validacao do formulario do genero

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,10 +59,18 @@
     <style name="edittext_form">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+<!--        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:layout_marginTop">16dp</item>-->
+        <item name="android:backgroundTint">@color/colorAccent</item>
+    </style>
+
+    <style name="textinputlayout_form">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginRight">16dp</item>
-        <item name="android:layout_marginTop">16dp</item>
-        <item name="android:backgroundTint">@color/colorAccent</item>
     </style>
 
     <style name="Widget.Design.TextInputLayout" parent="AppTheme">
@@ -80,7 +88,7 @@
 
     <style name="AppTheme.TextErrorAppearance" parent="TextAppearance.Design.Error">
         <!-- Error message appearance here -->
-        <item name="android:textColor">#ff0000</item>
+        <item name="android:textColor">@color/colorAccent</item>
     </style>
 
 </resources>
