--- a/app/src/main/res/layout/new_genero.xml
+++ b/app/src/main/res/layout/new_genero.xml
@@ -4,14 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp">
+        android:id="@+id/inputGenero"
+        style="@style/textinputlayout_form">
 
         <EditText
-            android:id="@+id/etGenero"
             style="@style/edittext_form"
             android:hint="Informe o genero" />
     </android.support.design.widget.TextInputLayout>
