Adicionada a plataforma na listagem dos games

--- a/app/src/main/res/layout/game_list_row.xml
+++ b/app/src/main/res/layout/game_list_row.xml
@@ -21,4 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/tvPlataforma"
+        android:layout_below="@id/tvGenero"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
