--- a/app/src/main/res/layout/new_game.xml
+++ b/app/src/main/res/layout/new_game.xml
@@ -5,9 +5,7 @@
     android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        style="@style/textinputlayout_form"
         android:id="@+id/inputTitulo">
 
         <EditText
