--- a/app/src/main/res/layout/new_plataforma.xml
+++ b/app/src/main/res/layout/new_plataforma.xml
@@ -5,9 +5,7 @@
     android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        style="@style/textinputlayout_form"
         android:id="@+id/inputCodigoPlataforma">
 
         <EditText
@@ -16,9 +14,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        style="@style/textinputlayout_form"
         android:id="@+id/inputDescricaoPlataforma">
 
         <EditText
